# envparse

./: LICENSE.txt  pyproject.toml
docs/: README.md
src/envparse/: __init__.py  _namespace.py  _parser.py  _types.py
